<resources>
    <string name="app_name">LOSTPlayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="checkable">Recommend</string>
    <string name="stopplay">Stop</string>
        <string name="queuePipeline">

        {
           "@type":"lab.android.evgalexandrakaterwth.lostplayer.funf.QueuePipeline",
           "name":"queuePipeline",
           "version":1,
           "data":[
              {
                 "@type":"edu.mit.media.funf.probe.builtin.LinearAccelerationSensorProbe",
                 "sensorDelay":"NORMAL",
                 "@schedule":{
                    "interval":60,
                    "duration":60,
                    "strict":true
                 }
              },
              {
                 "@type":"edu.mit.media.funf.probe.builtin.GyroscopeSensorProbe",
                 "sensorDelay":"NORMAL",
                 "@schedule":{
                    "interval":60,
                    "duration":60,
                    "strict":true
                 }
              },
              {   "@type": "edu.mit.media.funf.probe.builtin.SimpleLocationProbe",
                   "@schedule": {
                      "interval": 1800,
                      "duration":60,
                       "offset": 0,
                        "strict":true

                    },
                    "goodEnoughAccuracy": 80,
                    "maxWaitTime": 60
              },
              {   "@type": "lab.android.evgalexandrakaterwth.lostplayer.funf.WeatherProbe",
                    "@schedule": {
                      "interval": 1800,
                       "duration":60,
                       "offset": 0,
                       "strict":true

                    },
                    "maxWaitTime": 60
               }



           ]
        }


    </string>
    <string name="runningContextJson">{"header":{"relation":"contextInstance","attributes":[{"name":"xLinearAccAverage","type":"numeric","class":false,"weight":1},{"name":"xLinearAccMax","type":"numeric","class":false,"weight":1},{"name":"xLinearAccMin","type":"numeric","class":false,"weight":1},{"name":"xLinearAccSma","type":"numeric","class":false,"weight":1},{"name":"yLinearAccAverage","type":"numeric","class":false,"weight":1},{"name":"yLinearAccMax","type":"numeric","class":false,"weight":1},{"name":"yLinearAccMin","type":"numeric","class":false,"weight":1},{"name":"yLinearAccSma","type":"numeric","class":false,"weight":1},{"name":"zLinearAccAverage","type":"numeric","class":false,"weight":1},{"name":"zLinearAccMax","type":"numeric","class":false,"weight":1},{"name":"zLinearAccMin","type":"numeric","class":false,"weight":1},{"name":"zLinearAccSma","type":"numeric","class":false,"weight":1},{"name":"xGyrosAverage","type":"numeric","class":false,"weight":1},{"name":"xGyrosMax","type":"numeric","class":false,"weight":1},{"name":"xGyrosMin","type":"numeric","class":false,"weight":1},{"name":"xGyrosSma","type":"numeric","class":false,"weight":1},{"name":"yGyrosAverage","type":"numeric","class":false,"weight":1},{"name":"yGyrosMax","type":"numeric","class":false,"weight":1},{"name":"yGyrosMin","type":"numeric","class":false,"weight":1},{"name":"yGyrosSma","type":"numeric","class":false,"weight":1},{"name":"zGyrosAverage","type":"numeric","class":false,"weight":1},{"name":"zGyrosMax","type":"numeric","class":false,"weight":1},{"name":"zGyrosMin","type":"numeric","class":false,"weight":1},{"name":"zGyrosSma","type":"numeric","class":false,"weight":1},{"name":"season","type":"numeric","class":false,"weight":1},{"name":"dayOfWeek","type":"numeric","class":false,"weight":1},{"name":"timeOfDay","type":"numeric","class":false,"weight":1},{"name":"mLatitude","type":"numeric","class":false,"weight":1},{"name":"mLongitude","type":"numeric","class":false,"weight":1},{"name":"temp","type":"numeric","class":false,"weight":1},{"name":"humidity","type":"numeric","class":false,"weight":1},{"name":"clouds","type":"numeric","class":false,"weight":1},{"name":"rainVolume","type":"numeric","class":false,"weight":1},{"name":"snowVolume","type":"numeric","class":false,"weight":1},{"name":"visibility","type":"numeric","class":false,"weight":1}]},"data":[{"sparse":false,"weight":1,"values":["\/-0.689854867032313\/","\/28.32577\/","\/-38.878956\/","\/-202.8173309075\/","\/0.703784771003402\/","\/17.836477\/","\/-11.456359\/","\/206.912722675\/","\/1.36595107095238\/","\/36.675213\/","\/-19.994993\/","\/401.58961486\/","\/0.226838612843537\/","\/3.9739685\/","\/-4.557068\/","\/66.690552176\/","\/-0.128330049393708\/","\/2.8318787\/","\/-3.1730652\/","\/-37.72903452175\/","\/-0.0372924792809524\/","\/5.6087646\/","\/-7.6743164\/","\/-10.9639889086\/","\/3.0\/","\/3.0\/","\/12.0\/","?","?","?","?","?","?","?","?"]}]}
</string>
    <string name="learningContext">
        {"header":{"relation":"contextInstance","attributes":[{"name":"xLinearAccAverage","type":"numeric","class":false,"weight":1},{"name":"xLinearAccMax","type":"numeric","class":false,"weight":1},{"name":"xLinearAccMin","type":"numeric","class":false,"weight":1},{"name":"xLinearAccSma","type":"numeric","class":false,"weight":1},{"name":"yLinearAccAverage","type":"numeric","class":false,"weight":1},{"name":"yLinearAccMax","type":"numeric","class":false,"weight":1},{"name":"yLinearAccMin","type":"numeric","class":false,"weight":1},{"name":"yLinearAccSma","type":"numeric","class":false,"weight":1},{"name":"zLinearAccAverage","type":"numeric","class":false,"weight":1},{"name":"zLinearAccMax","type":"numeric","class":false,"weight":1},{"name":"zLinearAccMin","type":"numeric","class":false,"weight":1},{"name":"zLinearAccSma","type":"numeric","class":false,"weight":1},{"name":"xGyrosAverage","type":"numeric","class":false,"weight":1},{"name":"xGyrosMax","type":"numeric","class":false,"weight":1},{"name":"xGyrosMin","type":"numeric","class":false,"weight":1},{"name":"xGyrosSma","type":"numeric","class":false,"weight":1},{"name":"yGyrosAverage","type":"numeric","class":false,"weight":1},{"name":"yGyrosMax","type":"numeric","class":false,"weight":1},{"name":"yGyrosMin","type":"numeric","class":false,"weight":1},{"name":"yGyrosSma","type":"numeric","class":false,"weight":1},{"name":"zGyrosAverage","type":"numeric","class":false,"weight":1},{"name":"zGyrosMax","type":"numeric","class":false,"weight":1},{"name":"zGyrosMin","type":"numeric","class":false,"weight":1},{"name":"zGyrosSma","type":"numeric","class":false,"weight":1},{"name":"season","type":"numeric","class":false,"weight":1},{"name":"dayOfWeek","type":"numeric","class":false,"weight":1},{"name":"timeOfDay","type":"numeric","class":false,"weight":1},{"name":"mLatitude","type":"numeric","class":false,"weight":1},{"name":"mLongitude","type":"numeric","class":false,"weight":1},{"name":"temp","type":"numeric","class":false,"weight":1},{"name":"humidity","type":"numeric","class":false,"weight":1},{"name":"clouds","type":"numeric","class":false,"weight":1},{"name":"rainVolume","type":"numeric","class":false,"weight":1},{"name":"snowVolume","type":"numeric","class":false,"weight":1},{"name":"visibility","type":"numeric","class":false,"weight":1}]},"data":[{"sparse":false,"weight":1,"values":["\/0.000204529828225256\/","\/0.00999172\/","\/-0.018509433\/","\/0.05992723967\/","\/0.00129504018861433\/","\/0.012976974\/","\/-0.016874403\/","\/0.379446775264\/","\/0.0000254464994692833\/","\/0.014278412\/","\/-0.015084267\/","\/0.0074558243445\/","\/-0.000361124683568028\/","\/0.006713867\/","\/-0.0012969971\/","\/-0.106170656969\/","\/0.0000893729095000002\/","\/0.00065612793\/","\/-0.0046844482\/","\/0.0262756353930001\/","\/-0.000235421316115646\/","\/0.0016937256\/","\/-0.00091552734\/","\/-0.069213866938\/","\/3.0\/","\/3.0\/","\/12.0\/","\/51.23863135\/","\/6.77775964\/","?","?","?","?","?","?"]}]}
    </string>

    <string name="recommend_menu_running">Recommend for Running</string>
    <string name="recommend_menu_learning">Recommend for Learning</string>
    <string name="no_recommend_menu_learning">Do not recommend </string>
</resources>
